--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container">
         <div class="content-area border  d-flex justify-content-center">
             <div class="content-box ">
-                <a href="https://www.cxh7jhd.com/2NK6RZ5/56PQ86C/?sub1=CAP"><img src="images/team-8.png" class="img-cercle" alt=""></a>
+                <a href="https://krabiclick.com/?a=9948&c=68465&s1=BBQ"><img src="images/team-8.png" class="img-cercle" alt=""></a>
                 <a href="
-                https://www.cxh7jhd.com/2NK6RZ5/56PQ86C/?sub1=CAP" class="dami"><h3 class="text-center atribute lal">Divorced mom</h3></a>
+                https://krabiclick.com/?a=9948&c=68465&s1=BBQ" class="dami"><h3 class="text-center atribute lal">Divorced mom</h3></a>
                 <a href="" class="ancor">
                     <p class="paragraph">I want to meet with you face 2 face.
                         Are you interested to meet with me ? <br>
@@ -27,9 +27,9 @@
                         Write back me here </p>
                 </a>
                 <a href="
-                https://www.cxh7jhd.com/2NK6RZ5/56PQ86C/?sub1=CAP" class="btn border button ">  I am over 24</a>
+                https://krabiclick.com/?a=9948&c=68465&s1=BBQ" class="btn border button ">  I am over 24</a>
                 <a href="
-                https://www.cxh7jhd.com/2NK6RZ5/56PQ86C/?sub1=CAP" class="btn border button "><i class="fa-solid fa-phone"></i> Call me</a>
+               https://krabiclick.com/?a=9948&c=68465&s1=BBQ" class="btn border button "><i class="fa-solid fa-phone"></i> Call me</a>
             </div>
         </div>
     </div>
